# dial

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIAL_UPGRADE_PLAN.md  LICENSE  LICENSE-APACHE  NOTICE  README.md  dial.py  dial_guide.db  dial_legacy.py  install.sh
.github/workflows/: release.yml
dial/: Cargo.toml
dial-cli/: Cargo.toml
dial-cli/src/: cli_handler.rs  main.rs  self_manage.rs  test_support.rs  wizard_backend.rs
dial-core/: Cargo.toml
dial-core/examples/: basic_usage.rs  custom_provider.rs  custom_validator.rs  event_handler.rs
dial-core/src/: artifacts.rs  budget.rs  command_safety.rs  config.rs  engine.rs  errors.rs  event.rs  health.rs  lib.rs  metrics.rs  output.rs  provider.rs  validation.rs
dial-core/src/db/: migrations.rs  mod.rs  schema.rs
dial-core/src/failure/: mod.rs  patterns.rs  solutions.rs
dial-core/src/git/: mod.rs
dial-core/src/iteration/: context.rs  mod.rs  orchestrator.rs  signal.rs  validation.rs  worker_access.rs
dial-core/src/learning/: mod.rs
dial-core/src/prd/: import.rs  mod.rs  parser.rs  schema.rs  templates.rs  wizard.rs
dial-core/src/spec/: mod.rs  parser.rs
dial-core/src/task/: mod.rs  models.rs
dial-core/tests/: checkpoint_tests.rs  chronic_failure_tests.rs  dry_run_tests.rs  engine_tests.rs  failed_diff_capture_tests.rs  health_tests.rs  learning_pattern_link_tests.rs  pattern_metrics_tests.rs  prd_tests.rs  similar_tasks_tests.rs  wizard_integration_tests.rs
dial-providers/: Cargo.toml
dial-providers/src/: anthropic.rs  cli_passthrough.rs  lib.rs  openai_compatible.rs
dial/src/: config.rs  errors.rs  lib.rs  main.rs
dial/src/db/: mod.rs  schema.rs
dial/src/failure/: solutions.rs
dial/src/iteration/: context.rs  mod.rs  orchestrator.rs
dial/src/spec/: mod.rs
dial/src/task/: mod.rs
docs/: ai-integration.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  implementation-history.md  methodology.md
npm/dial-cli/: README.md  package.json
npm/dial-cli/lib/: package-paths.mjs  platform.mjs
npm/dial-cli/scripts/: postinstall.js
npm/dial-cli/test/: install.test.mjs
specs/: DIAL_RUST_PRD.md  engine-hardening.md  loop-accuracy.md  operator-trust-hardening.md  unified-wizard.md  windows-e2e-autorun-scenario.md  windows-live-smoke-scenario.md  writable-worker-enforcement.md
templates/: AGENTS_DIAL_TEMPLATE.md
