[workspace]
resolver = "2"
members = [
    "dial-core",
    "dial-cli",
    "dial-providers",
]

[workspace.package]
version = "4.2.8"
edition = "2021"
rust-version = "1.70"
authors = ["John Deaton <john@victorysightsound.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/victorysightsound/dial"
homepage = "https://github.com/victorysightsound/dial"

[workspace.dependencies]
# Shared dependencies across workspace crates
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"

# Internal crates
dial-core = { path = "dial-core", version = "4.2.8" }
dial-providers = { path = "dial-providers", version = "4.2.8" }

[profile.release]
lto = true
codegen-units = 1
strip = true
