[package]
name = "dial"
version = "2.2.0"
edition = "2021"
authors = ["John Deaton <john@victorysightsound.com>"]
description = "DIAL - Deterministic Iterative Agent Loop"
license = "MIT"
repository = "https://github.com/victorysightsound/dial"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
regex = "1"
lazy_static = "1.4"
dirs = "5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "dial"
path = "src/main.rs"

[lib]
name = "dial"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
